[metadata]
name = ezpq
author = Donald Mellenbruch
author_email = donald@fresh2.dev
description = easy parallel queue
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fresh2dev/ezpq
project_urls =
    Bug Tracker = https://github.com/fresh2dev/ezpq/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
